image-server/route_quarkus.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api-backend
  labels:
    app: api-backend
spec:
  host: []
  to:
    kind: Service
    name: api-backend
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress: []
